Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/rare/Rare4.out
Rare4.java:20:14: compiler.err.cant.select.static.class.from.param.type
1 error
